[package]
name = "rsa-fdh"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
keywords = ["crypto", "rsa", "signature", "blind"]
categories = ["cryptography"]
description = "RSA-FDH is a is provably secure blind-signing signature scheme that uses RSA and a full domain hash and support blind signing / blind signatures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/rsa-fdh"
readme = "README.md"

[badges]
travis-ci = { repository = "phayes/rsa-fdh", branch = "master" }
codecov = { repository = "phayes/rsa-fdh", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
rsa =  {version = "0.1.3", features=["expose-internals"]}
fdh = "0.5.1"
num-bigint = "0.2.2"
num-bigint-dig = "0.4.0"
rand = "0.6.5"
subtle = "2.0.0"
digest = "0.8.0"
failure = "0.1.5"

[dev-dependencies]
sha2 = "0.8.0"
sha-1 = "0.8.1"
hex = "0.3.2"
rand = "0.6.5"