[package]
name = "rsa-fdh"
version = "0.2.1"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
keywords = ["crypto", "rsa", "signature", "blind"]
categories = ["cryptography"]
description = "RSA-FDH is a is provably secure blind-signing signature scheme that uses RSA and a full domain hash and support blind signing / blind signatures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/rsa-fdh"
readme = "README.md"

[badges]
travis-ci = { repository = "phayes/rsa-fdh", branch = "master" }
codecov = { repository = "phayes/rsa-fdh", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
rsa =  {version = "0.2.0", features=["expose-internals"]}
fdh = "0.6.0"
num-bigint = "0.2.6"
num-bigint-dig = "0.6.0"
rand = "0.7.3"
subtle = "2.2.2"
digest = "0.8.1"
failure = "0.1.6"

[dev-dependencies]
sha2 = "0.8.1"
sha-1 = "0.9.0"
hex = "0.4.1"
rand = "0.7.3"