[package]
name = "rsa-fdh"
version = "0.4.1"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
keywords = ["crypto", "rsa", "signature", "blind"]
categories = ["cryptography"]
description = "RSA-FDH is a is provably secure blind-signing signature scheme that uses RSA and a full domain hash and support blind signing / blind signatures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/rsa-fdh"
readme = "README.md"

[badges]
travis-ci = { repository = "phayes/rsa-fdh", branch = "master" }
codecov = { repository = "phayes/rsa-fdh", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
rsa = { version = "0.3.0", features = ["expose-internals"] }
fdh = "0.7.3"
num-bigint = { version = "0.6", features = [
    "zeroize"
], package = "num-bigint-dig" }
rand = "0.8.2"
subtle = "2.3.0"
digest = "0.9.0"
thiserror = "1.0.22"

[dev-dependencies]
sha2 = "0.9.2"
sha-1 = "0.9.2"
hex = "0.4.2"
rand = "0.8.2"
